<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleToneActivity">
    <TextView
        android:id="@+id/label_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/value_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/label_volume"
        app:layout_constraintBottom_toBottomOf="@+id/label_volume"
        app:layout_constraintStart_toEndOf="@+id/label_volume"/>

    <SeekBar
        android:id="@+id/volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/label_volume"
        app:layout_constraintTop_toBottomOf="@+id/label_volume" />

    <TextView
        android:id="@+id/label_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        app:layout_constraintTop_toBottomOf="@+id/volume"
        app:layout_constraintStart_toStartOf="@+id/label_volume"/>

    <TextView
        android:id="@+id/value_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/label_frequency"
        app:layout_constraintBottom_toBottomOf="@+id/label_frequency"
        app:layout_constraintStart_toEndOf="@+id/label_frequency"/>

    <SeekBar
        android:id="@+id/frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_frequency"
        app:layout_constraintStart_toStartOf="@+id/label_volume"/>

    <Button
        android:id="@+id/Cplus"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="C#"
        android:onClick="onTone"
        android:layout_marginStart="22dp"
        app:layout_constraintTop_toBottomOf="@+id/frequency"
        app:layout_constraintStart_toStartOf="@+id/C"/>

    <Button
        android:id="@+id/Dplus"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="D#"
        android:onClick="onTone"
        android:layout_marginStart="22dp"
        app:layout_constraintTop_toTopOf="@+id/Cplus"
        app:layout_constraintBottom_toBottomOf="@+id/Cplus"
        app:layout_constraintStart_toStartOf="@+id/D"/>

    <Button
        android:id="@+id/Fplus"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="F#"
        android:onClick="onTone"
        android:layout_marginStart="22dp"
        app:layout_constraintTop_toTopOf="@+id/Cplus"
        app:layout_constraintBottom_toBottomOf="@+id/Cplus"
        app:layout_constraintStart_toStartOf="@+id/F"/>

    <Button
        android:id="@+id/Gplus"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="G#"
        android:onClick="onTone"
        android:layout_marginStart="22dp"
        app:layout_constraintTop_toTopOf="@+id/Cplus"
        app:layout_constraintBottom_toBottomOf="@+id/Cplus"
        app:layout_constraintStart_toStartOf="@+id/G"/>

    <Button
        android:id="@+id/Aplus"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="A#"
        android:onClick="onTone"
        android:layout_marginStart="22dp"
        app:layout_constraintTop_toTopOf="@+id/Cplus"
        app:layout_constraintBottom_toBottomOf="@+id/Cplus"
        app:layout_constraintStart_toStartOf="@+id/A"/>

    <Button
        android:id="@+id/C"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="C"
        android:onClick="onTone"
        app:layout_constraintTop_toBottomOf="@+id/Cplus"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/D"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="D"
        android:onClick="onTone"
        app:layout_constraintTop_toTopOf="@+id/C"
        app:layout_constraintBottom_toBottomOf="@+id/C"
        app:layout_constraintStart_toEndOf="@+id/C"
        app:layout_constraintEnd_toStartOf="@+id/E"/>

    <Button
        android:id="@+id/E"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="E"
        android:onClick="onTone"
        app:layout_constraintTop_toTopOf="@+id/C"
        app:layout_constraintBottom_toBottomOf="@+id/C"
        app:layout_constraintStart_toEndOf="@+id/D"
        app:layout_constraintEnd_toStartOf="@+id/F"/>

    <Button
        android:id="@+id/F"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="F"
        android:onClick="onTone"
        app:layout_constraintTop_toTopOf="@+id/C"
        app:layout_constraintBottom_toBottomOf="@+id/C"
        app:layout_constraintStart_toEndOf="@+id/E"
        app:layout_constraintEnd_toStartOf="@+id/G"/>

    <Button
        android:id="@+id/G"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="G"
        android:onClick="onTone"
        app:layout_constraintTop_toTopOf="@+id/C"
        app:layout_constraintBottom_toBottomOf="@+id/C"
        app:layout_constraintStart_toEndOf="@+id/F"
        app:layout_constraintEnd_toStartOf="@+id/A"/>

    <Button
        android:id="@+id/A"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="A"
        android:onClick="onTone"
        app:layout_constraintTop_toTopOf="@+id/C"
        app:layout_constraintBottom_toBottomOf="@+id/C"
        app:layout_constraintStart_toEndOf="@+id/G"
        app:layout_constraintEnd_toStartOf="@+id/B"/>

    <Button
        android:id="@+id/B"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="B"
        android:onClick="onTone"
        app:layout_constraintTop_toTopOf="@+id/C"
        app:layout_constraintBottom_toBottomOf="@+id/C"
        app:layout_constraintStart_toEndOf="@+id/A"
        app:layout_constraintEnd_toStartOf="@+id/C2"/>

    <Button
        android:id="@+id/C2"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="C2"
        android:onClick="onTone"
        app:layout_constraintTop_toTopOf="@+id/C"
        app:layout_constraintBottom_toBottomOf="@+id/C"
        app:layout_constraintStart_toEndOf="@+id/B"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/label_octave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/octave"
        app:layout_constraintTop_toBottomOf="@+id/C"
        app:layout_constraintStart_toStartOf="@+id/label_volume"/>

    <SeekBar
        android:id="@+id/octave"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="-2"
        android:max="4"
        android:progress="0"
        app:layout_constraintTop_toBottomOf="@+id/label_octave"
        app:layout_constraintStart_toStartOf="@+id/label_volume"/>

    <ToggleButton
        android:id="@+id/sound_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound_on"
        app:layout_constraintTop_toBottomOf="@+id/octave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="msg"
        app:layout_constraintTop_toBottomOf="@+id/sound_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>